# UG-RNN

./: .gitignore  AUTHORS  ChangeLog  README.md  predict_all.sh  requirements.txt  results  setup.cfg  setup.py  setup.sh  train_all.sh  train_delaney.sh  train_huuskonsen.sh  train_karthikeyan.sh
HW2/: q1.py  q2.py  utils.py
HW2/data/: data.txt  edges.txt  locations.txt
HW2/pyGM/: _montecarlo.old.py  _wmbe.py  factor.py  factorGauss.py  filetypes.py  graphmodel.py  montecarlo.py  wmb.py
Hw1/: .~lock.rport.docx#  markov_chain.py  markov_chain.py~  results.txt  rport.docx
Hw1/proteins/: 12as.txt  153l.txt  16pk.txt  16vp.txt  1914.txt  19hc.txt  1a04.txt  1a0c.txt  1a0f.txt  1a0i.txt  1a0p.txt  1a12.txt  1a1v.txt  1a1w.txt  1a1x.txt  1a26.txt  1a28.txt  1a2o.txt  1a2p.txt  1a2v.txt  1a2z.txt  1a32.txt  1a3a.txt  1a3c.txt  1a41.txt  1a44.txt  1a4i.txt  1a4m.txt  1a4y.txt  1a53.txt  1a5t.txt  1a62.txt  1a6c.txt  1a6d.txt  1a6j.txt  1a6m.txt  1a6q.txt  1a6s.txt  1a77.txt  1a78.txt  (+2998 more)
UG-RNN-Fix/ugrnn/: input.smi  input.smi.mol  makefilePredict  tempReduced  ugrnnCheckResults.py  ugrnnTrain  ugrnnTrain.py
UG-RNN-Fix_OLD/: LICENSE.txt  README.txt
UG-RNN-Fix_OLD/dataset/: generateDataset.py  (+2 more)
data/: Delaney_solubility__info.txt
src/: Molecule.py  input_data.py  network.py  parse_solubility_data.py  results  test.py  test2.py  test3.py  testing.py  training.py  ugrnn.py  utils.py
ugrnn/: Molecule.py  config.py  input_data.py  loss.py  main.py  molecule.py  network.py  nn_utils.py  predict.py  split_data_set.py  test.py  test_network.py  train.py  ugrnn.py  utils.py
(+1927 files in other folders)
