[metadata]
name = ugrnn
version = 0.1
author = Akshay Jain
author-email = akshaybetala@gmail.com
summary = ugrnn
description-file = README.md
license = see LICENSE.txt
requires-python = >=2.6
Environment :: Console
Intended Audience :: Developers
Intended Audience :: Information Technology
Operating System :: OS Independent
Programming Language :: Python

[files]
packages =
    ugrnn